included final metric

--- a/supervised learning models.ipynb
+++ b/supervised learning models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d1cb837a",
    "metadata": {
     "execution": {
@@ -27,7 +27,7 @@
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
-    "from sklearn.model_selection import KFold\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.naive_bayes import MultinomialNB\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -41,35 +41,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "8dd7e7e9",
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2023-04-18T19:16:57.165893Z",
-     "iopub.status.busy": "2023-04-18T19:16:57.164771Z",
-     "iopub.status.idle": "2023-04-18T19:16:57.170574Z",
-     "shell.execute_reply": "2023-04-18T19:16:57.169685Z"
-    },
-    "papermill": {
-     "duration": 0.012527,
-     "end_time": "2023-04-18T19:16:57.173116",
-     "exception": false,
-     "start_time": "2023-04-18T19:16:57.160589",
-     "status": "completed"
-    },
-    "tags": []
-   },
+   "execution_count": null,
+   "id": "1e6ec5f5",
+   "metadata": {},
    "outputs": [],
    "source": [
     "def load_data(file_path):\n",
     "    data = pd.read_csv(file_path)\n",
     "    data.target = data.target.apply(lambda x: 1 if x > 0.5 else 0)\n",
-    "    return data['comment_text'], data['target']"
+    "    return data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "46c068f1",
    "metadata": {
     "execution": {
@@ -96,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "b4377622",
    "metadata": {
     "execution": {
@@ -116,7 +101,23 @@
    },
    "outputs": [],
    "source": [
-    "def train_models(X, y, n_splits=5):\n",
+    "def train_models(data, test_size=0.2, random_state=42):\n",
+    "    df_train, df_valid = train_test_split(\n",
+    "        data, test_size=test_size, random_state=random_state, stratify=data.target.values\n",
+    "    )\n",
+    "\n",
+    "    df_train = df_train.reset_index(drop=True)\n",
+    "    df_valid = df_valid.reset_index(drop=True)\n",
+    "\n",
+    "    X_train = df_train[\"comment_text\"]\n",
+    "    X_valid = df_valid[\"comment_text\"]\n",
+    "    # use this instead, will have to modify load_data and preprocess\n",
+    "    # X_train = preprocess(df_train[\"comment_text\"])\n",
+    "    # X_val = preprocess(df_valid[\"comment_text\"])\n",
+    "\n",
+    "    y_train = df_train[\"target\"]\n",
+    "    y_valid = df_valid[\"target\"]\n",
+    "\n",
     "    models = [\n",
     "        LogisticRegression(max_iter=1000),\n",
     "        MultinomialNB(),\n",
@@ -136,40 +137,33 @@
     "        'MLP'\n",
     "    ]\n",
     "\n",
-    "    kf = KFold(n_splits=n_splits)\n",
     "    best_auc = 0\n",
     "    best_model = None\n",
     "    best_model_name = None\n",
     "\n",
     "    for model, name in zip(models, model_names):\n",
     "        print(f'Training {name}...')\n",
-    "        aucs = []\n",
-    "        for train_index, val_index in tqdm(kf.split(X)):\n",
-    "            X_train, X_val = X[train_index], X[val_index]\n",
-    "            y_train, y_val = y[train_index], y[val_index]\n",
+    "        model.fit(X_train, y_train)\n",
+    "        y_pred = model.predict(X_valid)\n",
+    "        auc = roc_auc_score(y_valid, y_pred)\n",
+    "        print(f'{name} AUC: {auc}')\n",
     "\n",
-    "            model.fit(X_train, y_train)\n",
-    "            y_pred = model.predict(X_val)\n",
-    "            auc = roc_auc_score(y_val, y_pred)\n",
-    "            aucs.append(auc)\n",
-    "\n",
-    "        mean_auc = np.mean(aucs)\n",
-    "        print(f'{name} Mean AUC: {mean_auc}')\n",
-    "        \n",
-    "        if mean_auc > best_auc:\n",
-    "            best_auc = mean_auc\n",
+    "        if auc > best_auc:\n",
+    "            best_auc = auc\n",
     "            best_model = model\n",
     "            best_model_name = name\n",
     "\n",
     "    print(f'Best model: {best_model_name} with AUC: {best_auc}')\n",
     "    with open(f'best_model.bin', 'wb') as f:\n",
     "        pickle.dump(best_model, f)\n",
-    "    return best_model_name"
+    "\n",
+    "    # make final metric call and print it\n",
+    "    # metric_value = final_metric.get_value(df_valid, valid_outputs, model_name)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "5353a2b6",
    "metadata": {
     "execution": {
@@ -199,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "b2ae3ca1",
    "metadata": {
     "execution": {
@@ -215,27 +209,14 @@
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training Logistic Regression...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2it [01:23, 42.75s/it]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if __name__ == '__main__':\n",
-    "    X_data, y_data = load_data('data/train.csv')\n",
-    "    X_data_preprocessed = preprocess(X_data)\n",
-    "    best_model_name = train_models(X_data_preprocessed, y_data)\n",
+    "    data = load_data('data/train.csv')\n",
+    "\n",
+    "    train_models(data)\n",
+    "\n",
+    "    # add vizualizations \n",
     "\n",
     "    # Example 1 usage of the predict function\n",
     "    example_text = 'Immigrants don\\'t get deported. ILLEGAL immigrants do.'\n",
